testData/annotation/IDEA_100331_2.hx
package ;
class <info descr="null">GenericTest</info> {
    public var <info descr="null">arr</info>:<info descr="null">Array</info><<error descr="Unresolved type"><error descr="Unresolved type">TArray</error></error>>;

    public function new() {
    }
}